--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Tuyển Lào lột xác với HLV Hàn Quốc và cầu thủ bán thời gian",
+    "content": "HLV Ha Hyeok-jun, người Hàn Quốc, đã dẫn dắt tuyển Lào từ tháng 8/2024 và đối mặt với nhiều thách thức do tình hình bóng đá yếu kém tại đây. Tuy nhiên, ông đã cải thiện thể lực và kỹ năng của các cầu thủ, nhiều người vẫn phải làm thêm nghề khác để sống. Dưới sự dẫn dắt của ông, tuyển Lào đã ghi dấu ấn tại ASEAN Cup 2024 với hai trận hòa và ghi được 7 bàn. HLV Ha tiếp tục nuôi hy vọng đưa Lào vào sâu tại SEA Games 33 sắp tới.",
+    "link": "https://vnexpress.net/tuyen-lao-lot-xac-voi-hlv-han-quoc-va-cau-thu-ban-thoi-gian-4861447.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Tại sao HLV Ha Hyeok-jun được kỳ vọng cải thiện tuyển Lào?",
+    "answers": [
+      {
+        "text": "Vì ông đã có những cải thiện về thể lực và kỹ năng cho cầu thủ.",
+        "correct": true
+      },
+      {
+        "text": "Vì ông là HLV người Hàn Quốc đầu tiên.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã dẫn dắt Lào đến ASEAN Cup 2024.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông có nhiều kinh nghiệm ở các giải đấu quốc tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VnExpress Marathon Volvo All-Star công bố đường chạy",
+    "content": "VnExpress Marathon Volvo All-Star 2025 sẽ diễn ra vào ngày 20/4 tại khu công nghệ cao Hòa Lạc, Hà Nội. Cung đường thi đấu được thiết kế bằng phẳng, ít dốc và được bố trí biển báo cự ly đầy đủ để hỗ trợ vận động viên. Giải đấu áp dụng hệ thống xuất phát theo đợt nhằm giảm ùn tắc và nâng cao tính cạnh tranh. Hiện tại, ban tổ chức đang mở đăng ký với mức giá ưu đãi cho các cự ly 21km và 42km.",
+    "link": "https://vnexpress.net/vnexpress-marathon-volvo-all-star-cong-bo-duong-chay-4861268.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Giải marathon nào sẽ diễn ra tại khu công nghệ cao Hòa Lạc vào tháng 4 năm 2025?",
+    "answers": [
+      {
+        "text": "VnExpress Marathon Volvo All-Star",
+        "correct": true
+      },
+      {
+        "text": "Marathon Hà Nội 2025",
+        "correct": false
+      },
+      {
+        "text": "Giải chạy Đà Nẵng 2024",
+        "correct": false
+      },
+      {
+        "text": "Giải Marathon Quốc tế Việt Nam",
+        "correct": false
+      },
+      {
+        "text": "Marathon VnExpress 2023",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khám phá rừng hoa ban cổ thụ quyến rũ giữa đất trời Nặm Cứm tháng 3",
     "content": "Bản Nặm Cứm ở Điện Biên nổi bật với vẻ đẹp của rừng hoa ban cổ thụ vào tháng 3, với hơn 1.200 cây hoa ban đang nở rộ. Hoa ban không chỉ là biểu tượng văn hóa của người dân tộc Mông mà còn thu hút đông đảo du khách đến thăm quan và chụp ảnh. Rừng hoa ban cổ thụ đang được bảo tồn và phát triển du lịch, mang đến trải nghiệm tuyệt vời cho những ai yêu thích cảnh sắc thiên nhiên Tây Bắc.",
     "link": "https://tuoitre.vn/kham-pha-rung-hoa-ban-co-thu-quyen-ru-giua-dat-troi-nam-cum-thang-3-20250314161007272.htm",
@@ -336,33 +394,6 @@
     ]
   },
   {
-    "title": "6 vitamin, khoáng chất cần thiết cho não",
-    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
-    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
-    "answers": [
-      {
-        "text": "Vitamin D, B, magie, omega-3, kẽm",
-        "correct": true
-      },
-      {
-        "text": "Vitamin C, D, sắt",
-        "correct": false
-      },
-      {
-        "text": "Canxi, vitamin E, kali",
-        "correct": false
-      },
-      {
-        "text": "Vitamin B, A, kẽm, magie",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
     "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
     "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
@@ -385,6 +416,33 @@
       },
       {
         "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 vitamin, khoáng chất cần thiết cho não",
+    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
+    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
+    "answers": [
+      {
+        "text": "Vitamin D, B, magie, omega-3, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Vitamin C, D, sắt",
+        "correct": false
+      },
+      {
+        "text": "Canxi, vitamin E, kali",
+        "correct": false
+      },
+      {
+        "text": "Vitamin B, A, kẽm, magie",
         "correct": false
       }
     ]
@@ -591,6 +649,33 @@
     ]
   },
   {
+    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
+    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người mắc sốt xuất huyết có nên tắm không?",
+    "answers": [
+      {
+        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên tắm.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tắm nhưng không được gãi mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu khi đi bộ cảnh báo bệnh tiểu đường",
     "content": "Bài viết nêu rõ những dấu hiệu khi đi bộ có thể cảnh báo bệnh tiểu đường, bao gồm cảm giác tê, ngứa ran, chuột rút ở chân, mệt mỏi bất thường và sưng ở bàn chân. Những triệu chứng này có thể do bệnh thần kinh ngoại biên hoặc bệnh động mạch ngoại biên do tiểu đường gây ra. Việc phát hiện sớm những dấu hiệu này rất quan trọng để kiểm soát bệnh tiểu đường hiệu quả.",
     "link": "https://vnexpress.net/dau-hieu-khi-di-bo-canh-bao-benh-tieu-duong-4861192.html",
@@ -617,33 +702,6 @@
       },
       {
         "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
-    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người mắc sốt xuất huyết có nên tắm không?",
-    "answers": [
-      {
-        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên tắm.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tắm nhưng không được gãi mạnh.",
         "correct": false
       }
     ]
@@ -1113,33 +1171,6 @@
     ]
   },
   {
-    "title": "Cách VnExpress Marathon Volvo All-Star chọn chuẩn đầu vào",
-    "content": "VnExpress Marathon Volvo All-Star đã xác định chuẩn đầu vào cho các vận động viên dựa trên tính thách thức và khả năng tiếp cận. Mức chuẩn thành tích được đặt ra là sub4 marathon và sub2 bán marathon cho nam, sub5 marathon và sub2:30 bán marathon cho nữ, nhằm đảm bảo sự cân bằng giới tính và tính cạnh tranh. Quyết định này dựa trên số liệu thực tế từ hơn 100.000 runner tham gia các giải từ năm 2019 đến nay, cho thấy tỷ lệ đạt chuẩn khá thấp. Ban tổ chức mong muốn tạo ra một giải đấu vừa có tính cạnh tranh, vừa phù hợp với khả năng của nhiều vận động viên.",
-    "link": "https://vnexpress.net/cach-vnexpress-marathon-volvo-all-star-chon-chuan-dau-vao-4860693.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "VnExpress Marathon Volvo All-Star đã chọn chuẩn đầu vào như thế nào?",
-    "answers": [
-      {
-        "text": "Dựa trên tính thách thức và khả năng tiếp cận của vận động viên.",
-        "correct": true
-      },
-      {
-        "text": "Dựa trên tiêu chuẩn khắt khe như các giải quốc tế.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dựa vào số lượng người tham gia.",
-        "correct": false
-      },
-      {
-        "text": "Dựa vào thời gian hoàn thành của các vận động viên quốc tế.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ăn gì tăng cholesterol tốt?",
     "content": "Cholesterol tốt đóng vai trò quan trọng trong việc bảo vệ sức khỏe tim mạch bằng cách loại bỏ mảng bám tích tụ trong động mạch. Một số thực phẩm có thể giúp tăng cholesterol tốt bao gồm cá hồi, dầu ô liu, và các loại hạt. Việc bổ sung các thực phẩm này vào chế độ ăn uống hàng ngày có thể giúp giảm nguy cơ mắc các bệnh tim mạch.",
     "link": "https://vnexpress.net/an-gi-tang-cholesterol-tot-4861304.html",
@@ -1221,6 +1252,33 @@
     ]
   },
   {
+    "title": "Có nên rửa mặt bằng nước muối?",
+    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
+    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Có nên rửa mặt bằng nước muối không?",
+    "answers": [
+      {
+        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
+        "correct": true
+      },
+      {
+        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
+        "correct": false
+      },
+      {
+        "text": "Không, nước muối làm hỏng da ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Virus thủy đậu gây zona thần kinh tấn công não",
     "content": "Bà Thoa, 56 tuổi, đã mắc biến chứng viêm màng não do virus Varicella zoster (gây bệnh thủy đậu) tấn công não. Bà có triệu chứng đau đầu dữ dội, sốt cao và chóng mặt, và được điều trị khẩn cấp tại Bệnh viện Đa khoa Tâm Anh TP HCM. Dù virus này không phổ biến gây viêm não, nhưng nó có thể diễn tiến nhanh và nguy hiểm, đặc biệt ở người lớn tuổi và những người suy giảm miễn dịch. Sau 12 ngày điều trị, sức khỏe bà Thoa đã cải thiện và virus đã không còn trong dịch não tủy.",
     "link": "https://vnexpress.net/virus-thuy-dau-gay-zona-than-kinh-tan-cong-nao-4860734.html",
@@ -1247,33 +1305,6 @@
       },
       {
         "text": "Bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Có nên rửa mặt bằng nước muối?",
-    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
-    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Có nên rửa mặt bằng nước muối không?",
-    "answers": [
-      {
-        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
-        "correct": true
-      },
-      {
-        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Không, nước muối làm hỏng da ngay lập tức.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
         "correct": false
       }
     ]
@@ -3609,28 +3640,28 @@
     ]
   },
   {
-    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
-    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
-    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
     "answers": [
       {
-        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
         "correct": true
       },
       {
-        "text": "Chất xơ, đường, muối, protein",
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
         "correct": false
       },
       {
-        "text": "Vitamin D, canxi, sắt, đồng",
+        "text": "Vì không thích kết quả thẩm mỹ.",
         "correct": false
       },
       {
-        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -3663,6 +3694,33 @@
     ]
   },
   {
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "answers": [
+      {
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "correct": true
+      },
+      {
+        "text": "Chất xơ, đường, muối, protein",
+        "correct": false
+      },
+      {
+        "text": "Vitamin D, canxi, sắt, đồng",
+        "correct": false
+      },
+      {
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
     "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
     "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
@@ -3685,33 +3743,6 @@
       },
       {
         "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
