--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Cần nâng mức giảm trừ gia cảnh ngay trong năm nay",
+    "content": "Bài viết đề cập đến việc cần nâng mức giảm trừ gia cảnh cho người nộp thuế ngay trong năm nay, nhằm đảm bảo tính công bằng và thúc đẩy tăng trưởng kinh tế. Các chuyên gia khuyến nghị mức giảm trừ nên nằm trong khoảng 20-25 triệu đồng/tháng, thay vì chỉ 11 triệu đồng hiện tại, do chỉ số giá tiêu dùng đã tăng lên đáng kể. Việc điều chỉnh mức giảm trừ này được coi là cần thiết để giảm gánh nặng thuế cho người lao động và phù hợp với thực tế cuộc sống.",
+    "link": "https://tuoitre.vn/can-nang-muc-giam-tru-gia-canh-ngay-trong-nam-nay-20250314184822073.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao cần nâng mức giảm trừ gia cảnh ngay trong năm nay?",
+    "answers": [
+      {
+        "text": "Để đảm bảo công bằng và giảm gánh nặng thuế cho người lao động.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng thuế thu nhập cá nhân cho nhà nước.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm chi phí cho doanh nghiệp.",
+        "correct": false
+      },
+      {
+        "text": "Để phù hợp với luật thuế mới vào năm 2026.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "FPT mất vị trí doanh nghiệp tư nhân số 1 sàn chứng khoán Việt Nam vào tay Vingroup",
     "content": "FPT vừa mất vị trí doanh nghiệp tư nhân số một trên sàn chứng khoán Việt Nam vào tay Vingroup sau sự tăng trưởng mạnh mẽ của cổ phiếu VIC. Giá cổ phiếu FPT đã giảm 10% trong vòng một tháng qua, trong khi cổ phiếu VIC tăng gần 30%. Vốn hóa thị trường của Vingroup hiện đạt gần 200.000 tỉ đồng, trong khi vốn hóa của FPT giảm xuống còn hơn 193.200 tỉ đồng, dẫn đến việc FPT không còn giữ vị trí dẫn đầu như trước.",
     "link": "https://tuoitre.vn/fpt-mat-vi-tri-doanh-nghiep-tu-nhan-so-1-san-chung-khoan-viet-nam-vao-tay-vingroup-20250314182530519.htm",
@@ -139,6 +166,33 @@
     ]
   },
   {
+    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
+    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
+    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
+    "answers": [
+      {
+        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
+        "correct": true
+      },
+      {
+        "text": "Cắt giảm chi phí hoạt động đáng kể.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong chiến lược.",
+        "correct": false
+      },
+      {
+        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
     "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
     "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
@@ -192,33 +246,6 @@
       },
       {
         "text": "Chỉ cho trẻ xem phim tiếng Việt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
-    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
-    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
-    "answers": [
-      {
-        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
-        "correct": true
-      },
-      {
-        "text": "Cắt giảm chi phí hoạt động đáng kể.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong chiến lược.",
-        "correct": false
-      },
-      {
-        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
         "correct": false
       }
     ]
@@ -1225,6 +1252,33 @@
     ]
   },
   {
+    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
+    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người mắc sốt xuất huyết có nên tắm không?",
+    "answers": [
+      {
+        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên tắm.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tắm nhưng không được gãi mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu khi đi bộ cảnh báo bệnh tiểu đường",
     "content": "Bài viết nêu rõ những dấu hiệu khi đi bộ có thể cảnh báo bệnh tiểu đường, bao gồm cảm giác tê, ngứa ran, chuột rút ở chân, mệt mỏi bất thường và sưng ở bàn chân. Những triệu chứng này có thể do bệnh thần kinh ngoại biên hoặc bệnh động mạch ngoại biên do tiểu đường gây ra. Việc phát hiện sớm những dấu hiệu này rất quan trọng để kiểm soát bệnh tiểu đường hiệu quả.",
     "link": "https://vnexpress.net/dau-hieu-khi-di-bo-canh-bao-benh-tieu-duong-4861192.html",
@@ -1251,33 +1305,6 @@
       },
       {
         "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
-    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người mắc sốt xuất huyết có nên tắm không?",
-    "answers": [
-      {
-        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên tắm.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tắm nhưng không được gãi mạnh.",
         "correct": false
       }
     ]
@@ -1828,33 +1855,6 @@
     ]
   },
   {
-    "title": "Có nên rửa mặt bằng nước muối?",
-    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
-    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Có nên rửa mặt bằng nước muối không?",
-    "answers": [
-      {
-        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
-        "correct": true
-      },
-      {
-        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Không, nước muối làm hỏng da ngay lập tức.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Virus thủy đậu gây zona thần kinh tấn công não",
     "content": "Bà Thoa, 56 tuổi, đã mắc biến chứng viêm màng não do virus Varicella zoster (gây bệnh thủy đậu) tấn công não. Bà có triệu chứng đau đầu dữ dội, sốt cao và chóng mặt, và được điều trị khẩn cấp tại Bệnh viện Đa khoa Tâm Anh TP HCM. Dù virus này không phổ biến gây viêm não, nhưng nó có thể diễn tiến nhanh và nguy hiểm, đặc biệt ở người lớn tuổi và những người suy giảm miễn dịch. Sau 12 ngày điều trị, sức khỏe bà Thoa đã cải thiện và virus đã không còn trong dịch não tủy.",
     "link": "https://vnexpress.net/virus-thuy-dau-gay-zona-than-kinh-tan-cong-nao-4860734.html",
@@ -1881,6 +1881,33 @@
       },
       {
         "text": "Bệnh tim mạch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Có nên rửa mặt bằng nước muối?",
+    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
+    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Có nên rửa mặt bằng nước muối không?",
+    "answers": [
+      {
+        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
+        "correct": true
+      },
+      {
+        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
+        "correct": false
+      },
+      {
+        "text": "Không, nước muối làm hỏng da ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
         "correct": false
       }
     ]
@@ -3346,33 +3373,6 @@
     ]
   },
   {
-    "title": "Ngành thuế khóc ròng vì những khoản nợ thuế vài ngàn đồng",
-    "content": "Ngành thuế Việt Nam đang gặp khó khăn với hơn 1,4 tỷ khoản nợ thuế có giá trị từ 2.000 đến 10.000 đồng, chủ yếu là tiền phạt chậm nộp. Việc thu những khoản nợ nhỏ này tốn kém chi phí quản lý hơn cả số thuế thu được, khiến ngành thuế đề xuất xóa bỏ các khoản nợ nhỏ để giảm áp lực. Các chuyên gia cũng đề xuất nâng ngưỡng miễn thuế cho cá nhân lên 100.000 đồng để tối ưu hóa nguồn lực và giảm lãng phí thời gian, nhân lực cho việc xử lý các khoản nợ không đáng kể này.",
-    "link": "https://tuoitre.vn/nganh-thue-khoc-rong-vi-nhung-khoan-no-thue-vai-ngan-dong-20250313222531182.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao ngành thuế Việt Nam có nhiều khoản nợ thuế nhỏ?",
-    "answers": [
-      {
-        "text": "Vì chi phí thu thuế cao hơn số tiền thu được.",
-        "correct": true
-      },
-      {
-        "text": "Do người nộp thuế không quan tâm đến khoản nợ nhỏ.",
-        "correct": false
-      },
-      {
-        "text": "Vì ngành thuế không đủ nhân lực để thu nợ.",
-        "correct": false
-      },
-      {
-        "text": "Do các doanh nghiệp thường nộp thừa tiền thuế.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đồng loạt cải tạo vỉa hè ở nội đô TP HCM",
     "content": "TP Hồ Chí Minh đang tiến hành cải tạo đồng loạt vỉa hè tại nhiều tuyến đường, đặc biệt là ở quận 1 và quận 6, nhằm chỉnh trang đô thị và nâng cao sự thuận tiện cho người đi bộ. Các vỉa hè sẽ được lát đá granite mới, thay thế nắp hầm ga, và cải tạo bồn cây xanh. Tổng kinh phí cho dự án này lên đến hơn 355 tỷ đồng cho quận 1 và 55 tỷ đồng cho quận 6. Dự kiến, các công trình cải tạo sẽ hoàn thành trước lễ 30/4 năm nay.",
     "link": "https://vnexpress.net/dong-loat-cai-tao-via-he-o-noi-do-tp-hcm-4861003.html",
@@ -3516,33 +3516,6 @@
     ]
   },
   {
-    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
-    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
-    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
-    "answers": [
-      {
-        "text": "Gần 7.000 tỷ đồng",
-        "correct": true
-      },
-      {
-        "text": "Trên 5.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Dưới 6.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Khoảng 10.000 tỷ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
     "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
     "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
@@ -3565,6 +3538,33 @@
       },
       {
         "text": "Do không có khách du lịch đến thăm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
+    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
+    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
+    "answers": [
+      {
+        "text": "Gần 7.000 tỷ đồng",
+        "correct": true
+      },
+      {
+        "text": "Trên 5.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Dưới 6.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 10.000 tỷ đồng",
         "correct": false
       }
     ]
@@ -3967,33 +3967,6 @@
       },
       {
         "text": "Không có bệnh nào lây qua hôn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiến Linh: 'Chúng tôi sẽ gánh phần của Xuân Son'",
-    "content": "Tiến Linh, cầu thủ Quả Bóng Vàng Việt Nam, khẳng định đội tuyển sẽ nỗ lực để bù đắp cho sự vắng mặt của Nguyễn Xuân Son trong các trận đấu sắp tới với Campuchia và Lào. Mặc dù vừa gặp chấn thương gối, Tiến Linh vẫn tham gia tập luyện và tự tin rằng anh sẽ kịp hồi phục để thi đấu. Anh cho biết sự thiếu hụt của Xuân Son là một tổn thất lớn, nhưng toàn đội đang có tinh thần tốt và quyết tâm đạt được mục tiêu vượt qua vòng loại Asian Cup 2027.",
-    "link": "https://vnexpress.net/tien-linh-chung-toi-se-ganh-phan-cua-xuan-son-4861046.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tiến Linh đã nói gì về sự vắng mặt của Nguyễn Xuân Son?",
-    "answers": [
-      {
-        "text": "Chúng tôi sẽ gánh phần của cậu ấy ở đội tuyển.",
-        "correct": true
-      },
-      {
-        "text": "Chúng tôi không thể thi đấu tốt mà không có cậu ấy.",
-        "correct": false
-      },
-      {
-        "text": "Chúng tôi sẽ tìm kiếm cầu thủ khác thay thế.",
-        "correct": false
-      },
-      {
-        "text": "Chúng tôi sẽ cố gắng nhưng không chắc có thể thắng.",
         "correct": false
       }
     ]
